# nanoTTS

./: .env.example  .gitignore  README.md  pyproject.toml  test_file.py
.github/workflows/: ci.yml
demo/: README.md  __init__.py  interactive_demo.py
nanotts/: __init__.py  audio_data.py  engine.py  model.py  nano_tts.py  segmenter.py  utils.py
nanotts/plugins/: __init__.py  dummy.py  edge.py
tests/: test_audio_data.py  test_core.py  test_engine.py  test_nano_tts.py  test_plugins.py  test_segmenter.py
